# afriklang-voicemail-intelligence

./: .env.example  .gitignore  Dockerfile  ETAT_AVANCEMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: index.py
scripts/: cd.sh  ci.sh  dev.sh  seed_demo.py
src/afriklang_vm/: __init__.py  config.py  logging_config.py  main.py
src/afriklang_vm/api/: __init__.py  deps.py  router.py
src/afriklang_vm/api/routes/: health.py  whatsapp.py
src/afriklang_vm/db/: __init__.py  engine.py
src/afriklang_vm/domain/: __init__.py  enums.py  models.py  schemas.py
src/afriklang_vm/integrations/: __init__.py
src/afriklang_vm/integrations/afriklang/: __init__.py  client.py  models.py
src/afriklang_vm/integrations/audio/: __init__.py  converter.py
src/afriklang_vm/integrations/twilio/: __init__.py  client.py  security.py
src/afriklang_vm/repositories/: __init__.py  message_repository.py  preference_repository.py
src/afriklang_vm/services/: command_service.py  confidence_service.py  keyword_service.py  search_service.py  transcription_service.py
tests/: conftest.py
tests/integration/: test_webhook.py
tests/unit/: test_audio_converter.py  test_confidence_service.py  test_enums.py  test_keyword_service.py
