[project]
name = "afriklang-voicemail"
version = "0.1.0"
description = "Afriklang Voicemail Intelligence — WhatsApp bot that transcribes Twi/Wolof voice notes via the Afriklang ASR API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Afriklang" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "twilio>=9.3",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
]

[project.optional-dependencies]
audio = [
    "pydub>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afriklang_vm"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/afriklang_vm"]
branch = true
